force-app/main/default/objects/CustomerVisit__c/CustomerVisit__c.object-meta.xml
<CustomObject>
    <label>Customer Visit</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Customer Visit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>