force-app/main/default/objects/CustomerVisit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>OpportunityName__r.Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>