force-app/main/default/objects/CustomerVisit__c/fields/RecordVisit__c.field-meta.xml
<CustomField>
    <fullName>RecordVisit__c</fullName>
    <description>Used for calculation in the report.</description>
    <formula>IF(ISPICKVAL( Status__c , &quot;Full Tour&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>