force-app/main/default/objects/CustomerVisit__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>OpportunityName__r.Unit__r.Name</formula>
    <label>Unit</label>
    <type>Text</type>
</CustomField>