force-app/main/default/objects/CustomerVisit__c/fields/VisitorGrade__c.field-meta.xml
<CustomField>
    <fullName>VisitorGrade__c</fullName>
    <label>Visitor Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>