force-app/main/default/objects/CustomerVisit__c/fields/VisitSubject__c.field-meta.xml
<CustomField>
    <fullName>VisitSubject__c</fullName>
    <defaultValue>(&quot;Auto Generate&quot;)</defaultValue>
    <label>Visit Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>