force-app/main/default/objects/CustomerVisit__c/fields/VisitSubjectFormat__c.field-meta.xml
<CustomField>
    <fullName>VisitSubjectFormat__c</fullName>
    <formula>TEXT(Status__c)&amp; &quot; &quot; &amp; TEXT( StartDate__c ) &amp; &quot; &gt; &quot; &amp;  OpportunityName__r.Name</formula>
    <label>VisitSubjectFormat</label>
    <type>Text</type>
</CustomField>