force-app/main/default/objects/CustomerVisit__c/validationRules/checkEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>checkEndDate</fullName>
    <active>true</active>
    <description>End Date &lt; Start Date</description>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date cannot be later than Start Date.</errorMessage>
</ValidationRule>