force-app/main/default/objects/CustomerVisit__c/validationRules/checkstartdate.validationRule-meta.xml
<ValidationRule>
    <fullName>checkstartdate</fullName>
    <active>true</active>
    <description>Start Date &gt; End Date</description>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start Date cannot be more than End Date.</errorMessage>
</ValidationRule>